--- a/tools/nginx/apps.conf
+++ b/tools/nginx/apps.conf
@@ -2,11 +2,11 @@ server {
 	listen 80;
 	listen [::]:80;
 
-	server_name api.samjna.co.in;
+	server_name core.samjna.co.in;
 
 	client_max_body_size 2G;
 
-	location /core-service {
+	location / {
 		proxy_http_version 1.1;
 		proxy_cache_bypass $http_upgrade;
 
@@ -17,10 +17,19 @@ server {
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
 
-		proxy_pass http://127.0.0.1:5001;
+		proxy_pass http://127.0.0.1:8000;
 	}
+}
 
-	location /analytics-service {
+server {
+	listen 80;
+	listen [::]:80;
+
+	server_name analytics.samjna.co.in;
+
+	client_max_body_size 2G;
+
+	location / {
 		proxy_http_version 1.1;
 		proxy_cache_bypass $http_upgrade;
 
@@ -31,15 +40,7 @@ server {
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
 
-		# Set higher timeout limits
-    proxy_read_timeout 300s;
-    proxy_connect_timeout 300s;
-    proxy_send_timeout 300s;
-
-    # Ensure backend keeps connection alive
-    keepalive_timeout 300s;
-
-		proxy_pass http://127.0.0.1:5002;
+		proxy_pass http://127.0.0.1:8001;
 	}
 }
 
@@ -66,12 +67,11 @@ server {
 	}
 }
 
-
 server {
 	listen 80;
 	listen [::]:80;
 
-	server_name udvega.samjna.co.in;
+	server_name chinta.samjna.co.in;
 
 	client_max_body_size 2G;
 
@@ -89,6 +89,7 @@ server {
 		proxy_pass http://127.0.0.1:3002;
 	}
 }
+
 
 server {
 	listen 80;
@@ -110,5 +111,29 @@ server {
 		proxy_set_header X-Forwarded-Proto $scheme;
 
 		proxy_pass http://127.0.0.1:3003;
+	}
+}
+
+
+server {
+	listen 80;
+	listen [::]:80;
+
+	server_name udvega.samjna.co.in;
+
+	client_max_body_size 2G;
+
+	location / {
+		proxy_http_version 1.1;
+		proxy_cache_bypass $http_upgrade;
+
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection 'upgrade';
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
+
+		proxy_pass http://127.0.0.1:3004;
 	}
 }
