feat: added stroop test backend and admin customizations

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -64,6 +64,7 @@
     "date-fns": "^3.6.0",
     "input-otp": "^1.2.4",
     "next-themes": "^0.3.0",
+    "react-colorful": "^5.6.1",
     "react-d3-cloud": "^1.0.6",
     "react-day-picker": "^8.10.1",
     "react-resizable-panels": "^2.1.7",
